<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable
            name="recipeListItem"
            type="de.psekochbuch.exzellenzkoch.userinterfacelayer.viewmodel.RecipeListViewmodel" />
        <variable
            name="value"
            type="String" />


    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:id="@+id/recipe_list_layout_item">

        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@mipmap/ic_launcher"
            android:padding="5dp"
            android:id="@+id/imageView_recipe_list_item"/>

        <TextView
            android:id="@+id/textView_recipe_title_item"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:textSize="20sp"
            android:layout_weight="5"
            android:text="@{value}" />


        <ImageButton
            android:id="@+id/button_remove_recipe"
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            app:srcCompat="@drawable/ic_delete_forever_black_24dp" />

    </LinearLayout>
</layout>